# Game-of-Life-Framework

./: .gitignore  Buffer.h  CMakeLists.txt  Game.cpp  Game.h  GameOfLif  Screen.cpp  Screen.h  main.cpp
examples/GameOfLife/: main.cpp
src/main/: Buffer.h  Game.cpp  Game.h  Macros.h  Screen.cpp  Screen.h
src/main/DataStructure/: Any.cpp  Buffer.tcc  JoinedHeap.hpp  TwoDimensionalGeometricBuffer.cpp  TwoDimensionalGeometricBuffer.hpp
src/main/Engine/: Curses.cpp  Curses.h  CursesPp.cpp  CursesPp.h
src/main/Game/: Canvas.cpp  Canvas.h  Control.cpp  Control.h  Dialog.cpp  Dialog.h  Game.cpp  Game.h
src/main/utils/: Any.h  Logger.cpp  Logger.h  LoggerFactory.cpp  LoggerFactory.h  Timer.cpp  Timer.h
src/test/: BufferTest.cpp  GameTest.cpp  LoggerTest.cpp  ScreenTest.cpp  TimerTest.cpp
src/test/Engine/: ScreenResizeTest.cpp.cpp
